apps/archived/gethomepage/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      enableServiceLinks: false
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          # https://github.com/gethomepage/homepage/pkgs/container/homepage
          image: "ghcr.io/gethomepage/homepage:v2.4.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: home.k8s.neese-web.de
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: home.k8s.neese-web.de
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: home.k8s.neese-web.de
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: config
          emptyDir: {}
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
